force-app/main/default/objects/Contact/fields/Account_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Text__c</fullName>
    <formula>IF($User.Id=OwnerId,&quot;true&quot;,&quot;false&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name Text</label>
    <type>Text</type>
</CustomField>