force-app/main/default/objects/Contact/fields/CanSeeAllData__c.field-meta.xml
<CustomField>
    <fullName>CanSeeAllData__c</fullName>
    <description>Si true, puede ver el campo email y teléfono del contact</description>
    <formula>OR(
    TEXT(Owner.Default_Sales_Organization__c) = TEXT($User.Default_Sales_Organization__c),
    $Permission.See_All_Contact_Data, 
    OwnerId = $User.Id
)</formula>
    <label>Can see All Data</label>
    <type>Checkbox</type>
</CustomField>