force-app/main/default/objects/Contact/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>External ID that matches the External ID of a Lead Contact</description>
    <label>External ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>