force-app/main/default/objects/Contact/fields/F_Domain__c.field-meta.xml
<CustomField>
    <fullName>F_Domain__c</fullName>
    <formula>RIGHT(Email, LEN(Email) - FIND(&quot;@&quot;, Email))</formula>
    <label>Email Domain</label>
    <type>Text</type>
</CustomField>