force-app/main/default/objects/Contact/fields/Inactive_Contact__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>campo que determina si un contacto esta inactivo o no</description>
    <label>Inactive Contact</label>
    <type>Checkbox</type>
</CustomField>