force-app/main/default/objects/Contact/fields/KEA_Id__c.field-meta.xml
<CustomField>
    <fullName>KEA_Id__c</fullName>
    <externalId>true</externalId>
    <label>KEA Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>