force-app/main/default/objects/Contact/fields/NBK_Interest__c.field-meta.xml
<CustomField>
    <fullName>NBK_Interest__c</fullName>
    <label>Interés</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Bathroom</fullName>
            </value>
            <value>
                <fullName>Tiles</fullName>
            </value>
            <value>
                <fullName>Façades</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>