force-app/main/default/objects/Contact/fields/notValidEmail__c.field-meta.xml
<CustomField>
    <fullName>notValidEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the email of the contact not a valid one?
true =&gt; no valid
false =&gt; valid</description>
    <label>Not valid Email</label>
    <type>Checkbox</type>
</CustomField>