force-app/main/default/objects/Contact/fields/SAP_Accounting_Info__c.field-meta.xml
<CustomField>
    <fullName>SAP_Accounting_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAP Accounting Info</label>
    <referenceTo>Sales_Relationship__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>