force-app/main/default/objects/Contact/fields/ToMarketingCloud__c.field-meta.xml
<CustomField>
    <fullName>ToMarketingCloud__c</fullName>
    <formula>IF(AND(
ISBLANK(Email) = false,
OR( TEXT(MailingCountryCode) =&apos;GB&apos;, TEXT(MailingCountryCode) = &apos;FR&apos;),
ISBLANK(EmailBouncedReason) = true,
CONTAINS(Email, &apos;porcelanosa&apos;) = false, 
Inactive_Contact__c = false,
HasOptedOutOfEmail = false,
notValidEmail__c = false
), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Marketing Cloud</label>
    <type>Checkbox</type>
</CustomField>