force-app/main/default/objects/Contact/recordTypes/USA.recordType-meta.xml
<RecordType>
    <fullName>USA</fullName>
    <active>true</active>
    <label>USA</label>
</RecordType>