force-app/main/default/objects/Contact/recordTypes/USA_Sales_representative.recordType-meta.xml
<RecordType>
    <fullName>USA_Sales_representative</fullName>
    <active>true</active>
    <label>USA Sales representative</label>
</RecordType>