force-app/main/default/objects/Contact/validationRules/Account_locked_or_delete.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_locked_or_delete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), 
    OR( 
    Account.Is_Locked__c = True, 
    Account.Is_Deleted__c = True) 
)</errorConditionFormula>
    <errorMessage>Can&apos;t create new contacts because the account is deleted or locked.</errorMessage>
</ValidationRule>