force-app/main/default/objects/Contact/validationRules/First_name_required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_name_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CONTAINS($User.Username, &apos;loads.user&apos;) = false,ISBLANK( FirstName))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Firste name is required.</errorMessage>
</ValidationRule>