force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTACT.IS_PERSON_ACCOUNT</columns>
    <columns>CONTACT.SALUTATION</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>LEGAL</value>
    </filters>
    <label>Tous les contacts</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Porcelanosa_Italia_Director_Regional</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Xtone_Italia</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>