force-app/main/default/objects/Contact/listViews/Architectural_Firms_West_Hollywod.listView-meta.xml
<ListView>
    <fullName>Architectural_Firms_West_Hollywod</fullName>
    <columns>FULL_NAME</columns>
    <columns>Specialization__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Account.Activity_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Account_Classification__c</field>
        <operation>equals</operation>
        <value>Architectural firm</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>denise</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>luna</value>
    </filters>
    <label>Architectural Firms</label>
    <sharedTo>
        <roleAndSubordinatesInternal>B_U_Manager_West_Hollywood</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Facades_USA</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>