force-app/main/default/objects/Contact/listViews/Arizona.listView-meta.xml
<ListView>
    <fullName>Arizona</fullName>
    <columns>FULL_NAME</columns>
    <columns>Sales_Office__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Office__c</field>
        <operation>contains</operation>
        <value>ARIZONA</value>
    </filters>
    <filters>
        <field>Account.Send_Mass_Email__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Arizona Fall Sale Campaign</label>
    <sharedTo>
        <role>Arizona_Outside_Sales_Rep</role>
        <role>General_Manager_LA</role>
    </sharedTo>
</ListView>