force-app/main/default/objects/Contact/listViews/Arizona_Grand_Opening.listView-meta.xml
<ListView>
    <fullName>Arizona_Grand_Opening</fullName>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Account.Activity__c</columns>
    <columns>FULL_NAME</columns>
    <columns>Sales_Office__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Trade_and_Specificators</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE_CODE</field>
        <operation>equals</operation>
        <value>AZ</value>
    </filters>
    <label>Arizona Grand Opening</label>
    <sharedTo>
        <role>Arizona_Outside_Sales_Rep</role>
    </sharedTo>
</ListView>