force-app/main/default/objects/Contact/listViews/Atlanta_Mimosa_Event.listView-meta.xml
<ListView>
    <fullName>Atlanta_Mimosa_Event</fullName>
    <columns>Account.Activity__c</columns>
    <columns>FULL_NAME</columns>
    <columns>Sales_Office__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Sales_Office__c</field>
        <operation>contains</operation>
        <value>ATLANTA</value>
    </filters>
    <filters>
        <field>Account.Activity__c</field>
        <operation>contains</operation>
        <value>high,medium,dormant</value>
    </filters>
    <filters>
        <field>CONTACT.ADDRESS2_STATE_CODE</field>
        <operation>equals</operation>
        <value>GA</value>
    </filters>
    <label>Atlanta Mimosa Event</label>
    <sharedTo>
        <roleAndSubordinatesInternal>B_U_Manager_Atlanta</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>