force-app/main/default/objects/Contact/listViews/Austin.listView-meta.xml
<ListView>
    <fullName>Austin</fullName>
    <columns>FULL_NAME</columns>
    <columns>Sales_Office__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Office__c</field>
        <operation>contains</operation>
        <value>AUSTIN</value>
    </filters>
    <label>Austin</label>
    <sharedTo>
        <roleAndSubordinatesInternal>B_U_Manager_Austin</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>