force-app/main/default/objects/Contact/listViews/Austin_Grand_Opening.listView-meta.xml
<ListView>
    <fullName>Austin_Grand_Opening</fullName>
    <columns>Account.Activity__c</columns>
    <columns>FULL_NAME</columns>
    <columns>Sales_Office__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Office__c</field>
        <operation>contains</operation>
        <value>Austin</value>
    </filters>
    <filters>
        <field>Account.Account_Status__c</field>
        <operation>notEqual</operation>
        <value>Inactive,Inactive: Cessation of Activity,Inactive: Duplicated,&quot;Inactive: Wrong Classification, not a business client&quot;,Inactive: Private customer purchasing through a trade client</value>
    </filters>
    <label>Austin Grand Opening</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Austin_Outside_Sales_Rep</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>B_U_Manager_Austin</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>