force-app/main/default/objects/Contact/listViews/Brooklyn.listView-meta.xml
<ListView>
    <fullName>Brooklyn</fullName>
    <columns>FULL_NAME</columns>
    <columns>Sales_Office__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Office__c</field>
        <operation>contains</operation>
        <value>BROOKLYN SHOWROOM</value>
    </filters>
    <filters>
        <field>Account.Send_Mass_Email__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Brooklyn Fall Sale Campaign</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Brooklyn_Outside_Sales</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>