force-app/main/default/objects/Contact/listViews/Brooklyn_Novelties.listView-meta.xml
<ListView>
    <fullName>Brooklyn_Novelties</fullName>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Account.Activity__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>FULL_NAME</columns>
    <columns>Sales_Office__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Account_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Trade_and_Specificators</value>
    </filters>
    <filters>
        <field>CONTACT.ADDRESS2_CITY</field>
        <operation>contains</operation>
        <value>Brooklyn</value>
    </filters>
    <filters>
        <field>Sales_Office__c</field>
        <operation>contains</operation>
        <value>Paramus,brooklyn</value>
    </filters>
    <label>Brooklyn Novelties</label>
    <sharedTo>
        <role>Brooklyn_Outside_Sales</role>
        <role>Porcelanosa_USA_Director_Regional</role>
    </sharedTo>
</ListView>