force-app/main/default/objects/Contact/listViews/Contactos_visitas.listView-meta.xml
<ListView>
    <fullName>Contactos_visitas</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account.Account_Status__c</columns>
    <columns>Account.Last_Activity_Date__c</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>External_ID__c</field>
        <operation>contains</operation>
        <value>VENUE</value>
    </filters>
    <label>Contactos visitas</label>
</ListView>